--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "main": "app/index.js",
   "dependencies": {
     "chalk": "^0.5.1",
-    "yeoman-generator": "^0.18.6",
+    "lodash": "^3.2.0",
+    "yeoman-generator": ">=0.18.0 <0.18.9",
     "yosay": "^1.0.1"
   },
   "homepage": "http://github.com/tameraydin/generator-cross-module",
