--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-cross-module",
   "version": "0.1.0",
-  "description": "Create modules that can be used both on Node & Browser",
+  "description": "Create cross-platform modules that can be used both on Node.js & Browser",
   "keywords": [
     "yeoman-generator",
     "npm",
